Minor UI Improvements

--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -19,7 +19,7 @@ html(lang='en-US')
                             label Password
                             input.form-control.mb-2(type='password' name='password' data-validate required)
                         .col-12
-                            button.btn.btn-primary(type='submit') Login
+                            button.btn.btn-light.text-primary(type='submit') Login
                 .col.text-center(style='padding-top:10%;padding-bottom:10%;')
                     span.p-4.bg-light.text-dark(style='border-radius:100%;') OR
                 .col-12.col-md-5
@@ -47,7 +47,7 @@ html(lang='en-US')
                                 label Confirm Password
                                 input.form-control.mb-2(type='password' name='passwordconf' data-validate required)
                         .col-12
-                            button.btn.btn-primary(type='submit') Sign Up
+                            button.btn.btn-light.text-primary(type='submit') Sign Up
 
         include components/footer
         include components/scripts
