Updated themes page

--- a/src/views/components/navbar.pug
+++ b/src/views/components/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light
+nav.navbar.navbar-expand-lg.navbar-light.sticky-top
     .container-fluid
         a.navbar-brand.text-primary.mr-lg-4(href='/' style='font-weight: lighter;')
             img.img-fluid.d-inline-block.align-top(
