--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -3,9 +3,9 @@ include components/dashboard/education
 
 doctype html
 
-mixin theme-card(themeName, description, thumbnail)
+mixin theme-card(themeName, description, thumbnail, refName)
     .col-12.col-md-6.col-lg-3.mb-4
-        .card.preview-theme-card.p-4(style='height:100%')
+        .card.preview-theme-card.p-4(style='height:100%' onclick=`window.location = 'themes/preview?theme=${refName}'`)
             img.card-img-top(src=`/images/theme-thumbs/${thumbnail}`)
             .card-body
                 h5.card-title.text-center= themeName
@@ -26,7 +26,8 @@ html(lang='en-US')
             .row
                 +theme-card('Lux',
                             'Lux is a clean and simple theme, providing a touch of class to an otherwise boring resume.',
-                            'LuxPreview.png')
+                            'LuxPreview.png',
+                            'lux')
                 +theme-card('Lux Condensed',
                             'Lux Condensed is for the professionals with a lot to fit on their resume. Slick and packed with good Feng Shui.',
                             'LuxCondensedPreview.png')
@@ -46,7 +47,8 @@ html(lang='en-US')
             .row
                 +theme-card('Budgie Blue',
                             'White on light blue. Black on white. Bold heading. You get the jist.',
-                            'BudgieBluePreview.png')
+                            'BudgieBluePreview.png',
+                            'budgie-blue')
             .row
                 .col-12
                     h3 Lux Suite
