--- a/src/public/stylesheets/resumes/resume.css
+++ b/src/public/stylesheets/resumes/resume.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Avenir Next", Sawasdee, Helvetica, sans-serif;
+    font-family: 'Avenir Next', Sawasdee, Helvetica, sans-serif;
 }
 
 html,
@@ -25,10 +25,26 @@ body {
     text-align: right;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .w-100 {
     width: 100%;
 }
 
 .w-50 {
     width: 50%;
+}
+
+.m-0 {
+    margin: 0;
+}
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
 }
